<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_title"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextViewString1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_string1"
        app:layout_constraintTop_toBottomOf="@id/TextViewTitle" />

    <EditText
        android:id="@+id/EditTextString1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:labelFor="@id/TextViewString1"
        app:layout_constraintTop_toBottomOf="@id/TextViewString1" />

    <TextView
        android:id="@+id/TextViewString2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_string2"
        app:layout_constraintTop_toBottomOf="@id/EditTextString1" />

    <EditText
        android:id="@+id/EditTextString2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:labelFor="@id/TextViewString2"
        app:layout_constraintTop_toBottomOf="@id/TextViewString2" />

    <Button
        android:id="@+id/ButtonCompare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditTextString2" />

    <TextView
        android:id="@+id/TextViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ButtonCompare" />

</androidx.constraintlayout.widget.ConstraintLayout>